tests/paczka1/fuzzy1/78970618.err
Error in line 14: lGyf S119 60,2
Error in line 21: o4qpP S432 89,0
Error in line 26: lGyf S119 10,8
